--- a/src/app/modules/route-management/pages/list-routes/list-routes.component.html
+++ b/src/app/modules/route-management/pages/list-routes/list-routes.component.html
@@ -1,44 +1,44 @@
 <app-page-container [breadcrumbs]="breadcrumbs" [loading]="loading$" class="noPadding">
 
     <div page-actions>
-        <button mat-raised-button color="primary" routerLink="create">
+        <button color="primary" mat-raised-button routerLink="create">
             <i class="icon ion-md-add"></i> &nbsp; Add
         </button>
     </div>
 
-    <table mat-table [dataSource]="routes" multiTemplateDataRows>
-        
+    <table [dataSource]="routes" mat-table multiTemplateDataRows>
+
         <ng-container matColumnDef="pattern">
-            <th mat-header-cell *matHeaderCellDef>URL Pattern</th>
-            <td mat-cell *matCellDef="let row">{{row.pattern}}</td>
-        </ng-container> 
+            <th *matHeaderCellDef mat-header-cell>URL Pattern</th>
+            <td *matCellDef="let row" mat-cell>{{row.pattern}}</td>
+        </ng-container>
 
         <ng-container matColumnDef="type">
-                <th mat-header-cell *matHeaderCellDef>Type</th>
-                <td mat-cell *matCellDef="let row">{{row.type}}</td>
-        </ng-container> 
+            <th *matHeaderCellDef mat-header-cell>Type</th>
+            <td *matCellDef="let row" mat-cell>{{row.type}}</td>
+        </ng-container>
 
         <ng-container matColumnDef="storageId">
-                <th mat-header-cell *matHeaderCellDef>Storage ID</th>
-                <td mat-cell *matCellDef="let row">{{row.storageId? row.storageId : "any"}}</td>
-        </ng-container> 
+            <th *matHeaderCellDef mat-header-cell>Storage ID</th>
+            <td *matCellDef="let row" mat-cell>{{row.storageId ? row.storageId : "any"}}</td>
+        </ng-container>
 
         <ng-container matColumnDef="repositoryId">
-            <th mat-header-cell *matHeaderCellDef>Repository ID</th>
-            <td mat-cell *matCellDef="let row">{{row.repositoryId? row.repositoryId : "any"}}</td>
-        </ng-container> 
+            <th *matHeaderCellDef mat-header-cell>Repository ID</th>
+            <td *matCellDef="let row" mat-cell>{{row.repositoryId ? row.repositoryId : "any"}}</td>
+        </ng-container>
 
         <ng-container matColumnDef="actions">
-            <th class="actions" mat-header-cell *matHeaderCellDef>Actions</th>
-            <td class="actions text-center" mat-cell *matCellDef="let route">
+            <th *matHeaderCellDef class="actions" mat-header-cell>Actions</th>
+            <td *matCellDef="let route" class="actions text-center" mat-cell>
                 <ul>
                     <li>
-                        <a title="Edit route" [routerLink]="[route.uuid, 'edit']">
+                        <a [routerLink]="[route.uuid, 'edit']" title="Edit route">
                             <i class="icon ion-md-create"></i>
                         </a>
                     </li>
                     <li>
-                        <a title="Delete route" (click)="confirmDeletion(route)">
+                        <a (click)="confirmDeletion(route)" title="Delete route">
                             <i class="icon ion-md-trash"></i>
                         </a>
                     </li>
@@ -46,8 +46,8 @@
             </td>
         </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <tr *matHeaderRowDef="displayedColumns; sticky: true" mat-header-row></tr>
+        <tr *matRowDef="let row; columns: displayedColumns;" mat-row></tr>
 
     </table>
 
