Issue-1143: Add some additional margin to loading spinner

--- a/src/app/shared/layout/components/page-container/page-container.component.html
+++ b/src/app/shared/layout/components/page-container/page-container.component.html
@@ -12,7 +12,7 @@
     <mat-card class="page-container-shadow">
         <mat-card-content *ngIf="(loading$ | async)">
             <div fxLayout="row" fxLayoutAlign="center center" fxFlex="1 1 auto">
-                <mat-spinner [strokeWidth]="5"></mat-spinner>
+                <mat-spinner [strokeWidth]="5" style="margin-top: 2rem; margin-bottom: 2rem;"></mat-spinner>
             </div>
         </mat-card-content>
         <mat-card-content *ngIf="!(loading$ | async)" fxLayout="column">
