--- a/src/app/modules/route-management/pages/manage-route/manage-route.component.scss
+++ b/src/app/modules/route-management/pages/manage-route/manage-route.component.scss
@@ -1,3 +1,5 @@
+@import "../../../../../sass/variables";
+
 .routeDetails {
 
   padding: 0px 0px 12px 12px;
@@ -33,8 +35,6 @@
   }
 
 }
-
-@import "../../../../../sass/variables";
 
 .list-container {
   min-width: 400px;
@@ -90,4 +90,29 @@
 
 .list-block.cdk-drop-list-dragging .list-box:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.hint {
+  margin-top: -15px;
+  font-size: 12px;
+  color: rgba(255, 255, 255, 0.4);
+}
+
+.ruleDefinition {
+  margin-bottom: 2.7rem;
+}
+
+.title {
+  font-weight: 400;
+  font-size: 1rem;
+  padding-bottom: 5px;
+  margin-bottom: 1rem;
+  border-bottom: 1px solid #2c82bc;
+}
+
+::ng-deep {
+  .mat-chip-list-stacked .mat-chip-list-wrapper .mat-standard-chip {
+    width: auto !important;
+    background-color: rgba(0,0,0,0.3) !important;
+  }
 }
