--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,9 +8,11 @@
 @import "sass/layout/components/card";
 @import "sass/layout/components/expansion-panel";
 @import "sass/layout/components/dialog";
+@import "sass/layout/components/dropdown-panel";
 @import "sass/layout/components/form";
 @import "sass/layout/components/form-errors";
 @import "sass/layout/components/menu";
+@import "sass/layout/components/ng-select";
 @import "sass/layout/components/select";
 @import "sass/layout/components/tab";
 @import "sass/layout/components/table";
