--- a/src/sass/layout/splash-screen.scss
+++ b/src/sass/layout/splash-screen.scss
@@ -45,8 +45,8 @@
   .spinner-container {
     position: relative;
     overflow: hidden;
-    height: 35px;
-    padding: 17px 0px 17px 0px;
+    height: 30px;
+    margin-top: 27px;
 
     &.loaded {
       visibility: hidden;
@@ -61,10 +61,9 @@
     position: absolute;
     left: -50px;
     background-color: #fff;
-    border-radius: 30%;
+    border-radius: 40%;
     //animation: spinner-move 3s infinite cubic-bezier(.32, 1, .88, .27);
-    animation: spinner-move 3.5s infinite cubic-bezier(0.4, 0.02, 0.08, 0.8);
-
+    animation: spinner-move 3s infinite cubic-bezier(.55,.1,.08,.8);
   }
 
   .spinner div:nth-child(1) {
@@ -94,7 +93,10 @@
     }
     30% {
       opacity: 0;
-      left: 0%;
+      left: -10%;
+    }
+    40% {
+      opacity: 0;
     }
     70% {
       opacity: 1;
