issue-1046 Fixing pagination styling.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,6 +13,7 @@
 @import "sass/layout/components/form-errors";
 @import "sass/layout/components/menu";
 @import "sass/layout/components/ng-select";
+@import "sass/layout/components/pagination";
 @import "sass/layout/components/select";
 @import "sass/layout/components/tab";
 @import "sass/layout/components/table";
