--- a/src/sass/layout/components/table.scss
+++ b/src/sass/layout/components/table.scss
@@ -3,7 +3,7 @@
 .mat-table-container {
   border-radius: 5px;
   overflow: hidden;
-  border: 1px solid $table-row-color;
+  border: 1px solid $table-header-row-color;
 }
 
 // remove the border from the last row in the table.
@@ -21,7 +21,7 @@
   background: none;
 
   thead .mat-header-row {
-    background: $table-row-color;
+    background: $table-header-row-color;
   }
 
   thead .mat-header-row.blue-bottom-border {
@@ -65,7 +65,7 @@
     }
   }
 
-  .mat-cell, .mat-header-cell {
+  .mat-cell, .mat-header-cell, .mat-footer-cell {
     padding: 10px 10px 10px 24px;
   }
 
