--- a/src/sass/layout/components/table.scss
+++ b/src/sass/layout/components/table.scss
@@ -80,6 +80,11 @@
 
     $icon-size: 30px;
 
+    i.disabled {
+      color: rgba(109, 109, 109, 0.6);
+    }
+
+
     .mat-icon-button {
       width: $icon-size;
       height: $icon-size;
@@ -118,7 +123,7 @@
       justify-content: center;
       width: 100%;
 
-      li {
+      li:not([hidden]) {
         display: block;
         flex: 0 1 auto; /* Default */
         margin-right: 15px;
@@ -126,5 +131,22 @@
       }
     }
 
+  }
+
+  // form input element styles
+  .mat-form-field {
+    display: inline-block;
+    padding: 0;
+    width: 100%;
+    margin-top: -40px;
+    margin-bottom: -40px;
+  }
+
+  .mat-form-field-infix {
+    padding: 0.2em 0;
+  }
+
+  .mat-progress-bar {
+    width: 90%;
   }
 }
