--- a/src/app/modules/logging-management/pages/logging/logging.component.html
+++ b/src/app/modules/logging-management/pages/logging/logging.component.html
@@ -1,8 +1,8 @@
 <app-page-container [breadcrumbs]="breadcrumbs" [loading]="loading$" class="noPadding">
 
     <div page-actions>
-        <button mat-raised-button color="primary" (click)="openNewLoggerDialog()" [disabled]="(loading$ | async) || (saving$ | async)">
-            Add logger
+        <button mat-raised-button color="primary" [routerLink]="'/admin/logging/logs'" [disabled]="(loading$ | async) || (saving$ | async)">
+            View logs
         </button>
     </div>
 
