--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,6 +15,7 @@
 @import "sass/layout/components/ng-select";
 @import "sass/layout/components/pagination";
 @import "sass/layout/components/select";
+@import "sass/layout/components/spinner";
 @import "sass/layout/components/tab";
 @import "sass/layout/components/table";
 @import "sass/layout/components/toastr";
