--- a/src/app/shared/layout/components/directory-listing/directory-listing.component.html
+++ b/src/app/shared/layout/components/directory-listing/directory-listing.component.html
@@ -25,7 +25,7 @@
         <td class="actions text-center" mat-cell *matCellDef="let repository">
             <ul *ngIf="repository.type !== 'back'">
                 <li>
-                    <a (click)="confirmDelete(repository)" title="Delete repository">
+                    <a (click)="confirmDelete(repository)" title="Delete?">
                         <i class="icon ion-md-trash"></i>
                     </a>
                 </li>
