--- a/src/app/modules/logging-management/pages/stream-log/stream-log.component.html
+++ b/src/app/modules/logging-management/pages/stream-log/stream-log.component.html
@@ -28,7 +28,7 @@
             ></i>
 
             <mat-menu #matMenuHeader="matMenu" xPosition="before" class="menu-2-offset">
-                <button mat-menu-item>Server log</button>
+                <button mat-menu-item (click)="downloadServerLog()">Server log</button>
                 <button mat-menu-item (click)="downloadBrowserLog()"
                         [disabled]="!hasMessages()">Browser log
                 </button>
@@ -68,7 +68,7 @@
                 <div *ngFor="let message of scroll.viewPortItems;" class="item">{{message?.data}}</div>
             </virtual-scroller>
 
-            <div *ngIf="isWaitingForMessages()"
+            <div *ngIf="isWaitingForMessages() || isConnecting()"
                  style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;">
 
                 <mat-progress-bar mode="query" class="dark-progress-bar"></mat-progress-bar>
