--- a/src/sass/layout/components/ng-select.scss
+++ b/src/sass/layout/components/ng-select.scss
@@ -37,3 +37,33 @@ $ng-select-bg: $panel-background;
     border-bottom: 2px solid $light-blue-1 !important;
   }
 }
+
+.ng-select-with-details {
+  .ng-option {
+    line-height: 1.5em !important;
+    padding: 4px 16px !important;
+
+    > small {
+      margin-bottom: 5px;
+    }
+
+    &.ng-option-selected {
+      color: $ng-select-text-color !important;
+    }
+  }
+}
+
+// for when you append the select dropdown to the body
+body > .ng-dropdown-panel.ng-select-bottom {
+  margin-top: -18px;
+  margin-left: 2px;
+
+  ng-select.ng-invalid.ng-touched .ng-select-container {
+    border-color: #dc3545;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 0 3px #fde6e8;
+  }
+}
+
+body > .ng-dropdown-panel.ng-select-top {
+  margin-bottom: -10px;
+}
