--- a/src/app/modules/security-management/pages/ldap-management/security-ldap-configuration/components/security-ldap-role-mapping-form-field/security-ldap-role-mapping-form-field.component.html
+++ b/src/app/modules/security-management/pages/ldap-management/security-ldap-configuration/components/security-ldap-role-mapping-form-field/security-ldap-role-mapping-form-field.component.html
@@ -5,7 +5,6 @@
         >
             <div fxFlex="50%">
                 <ng-select [items]="strongboxRoles"
-                           [loading]="strongboxRoleSearchLoading"
                            bindLabel="name"
                            bindValue="name"
                            placeholder="Strongbox Role"
@@ -15,6 +14,7 @@
                            class="ng-select-with-details"
                            [clearable]="false"
                            [markFirst]="true"
+                           dropdownPosition="bottom"
                            (ngModelChange)="emitFormValidity()"
                 >
                     <ng-template ng-option-tmp let-item="item" let-search="searchTerm">
