--- a/src/app/modules/security-management/pages/ldap-management/security-ldap-configuration/security-ldap-configuration.component.html
+++ b/src/app/modules/security-management/pages/ldap-management/security-ldap-configuration/security-ldap-configuration.component.html
@@ -153,7 +153,7 @@
         </mat-accordion>
 
         <div fxLayoutAlign="center center" class="formSubmitButtons noBorder">
-            <button mat-button routerLink=".." type="button">
+            <button mat-button routerLink="../../" type="button">
                 Back
             </button>
 
