Various fixes and improvements for the issue#1697 pull request

--- a/src/app/modules/dashboard/pages/dashboard/components/jvm-live-threads-stats/jvm-live-threads-stats.component.html
+++ b/src/app/modules/dashboard/pages/dashboard/components/jvm-live-threads-stats/jvm-live-threads-stats.component.html
@@ -1,8 +1,14 @@
 <mat-card>
     <mat-card-content>
-        <h2>JVM Live Threads</h2>
-        <hr style="border-color: #2196F3;">
-        <canvas baseChart width="350" height="200" style="margin-top: 1em;"
+        <h3>JVM Live Threads</h3>
+
+        <div class="blue-border">&nbsp;</div>
+
+        <mat-progress-spinner mode="indeterminate" strokeWidth="2" *ngIf="loading$ | async"></mat-progress-spinner>
+
+        <canvas baseChart width="350" height="200"
+            [style.display]="(loading$ | async) ? 'none' : ''"
+            style="margin-top: 1em;"
             [datasets]="jvmLiveThreadsLineChartDataSet"
             [labels]="jvmLiveThreadsLineChartLabels"
             [options]="jvmLiveThreadLineChartOptions"
