--- a/src/app/modules/dashboard/pages/dashboard/components/cpu-stats/cpu-stats.component.html
+++ b/src/app/modules/dashboard/pages/dashboard/components/cpu-stats/cpu-stats.component.html
@@ -1,8 +1,14 @@
 <mat-card>
     <mat-card-content>
-        <h2>CPU</h2>
-        <hr style="border-color: #2196F3;">
-        <canvas baseChart width="350" height="200" style="margin-top: 1em;"
+        <h3>CPU</h3>
+
+        <div class="blue-border">&nbsp;</div>
+
+        <mat-progress-spinner mode="indeterminate" strokeWidth="2" *ngIf="loading$ | async"></mat-progress-spinner>
+
+        <canvas baseChart width="350" height="200"
+            [style.display]="(loading$ | async) ? 'none' : ''"
+            style="margin-top: 1em;"
             [datasets]="cpuLineChartDataSet"
             [labels]="cpuLineChartLabels"
             [options]="cpuLineChartOptions"
